--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,23 @@
-FROM ubuntu:latest
+FROM ubuntu:14.04
 
 MAINTAINER Etienne Thevenot (etienne.thevenot@cea.fr)
 
-# Install Ansible
-RUN apt-get update
-RUN apt-get -y install software-properties-common
-RUN apt-add-repository ppa:ansible/ansible
-RUN apt-get -y install ansible
+# Setup package repos
+RUN echo "deb http://mirrors.ebi.ac.uk/CRAN/bin/linux/ubuntu trusty/" >> /etc/apt/sources.list
+RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
 
-# Run ansible role
-ADD ansible /files/ansible
-WORKDIR /files/ansible
-RUN ansible-playbook univariate.yml -c local
+# Update and upgrade system
+RUN apt-get update
+RUN apt-get -y upgrade
+
+# Install R and other needed packages
+RUN apt-get -y install r-base
+
+# Clone tool
+RUN apt-get -y install git
+RUN git clone -b docker https://github.com/workflow4metabolomics/univariate /files/univariate
 
 # Clean up
-# TODO Remove also ansible stuff (ansible, Python, etc.)
 RUN apt-get clean && apt-get autoremove -y && rm -rf /var/lib/{apt,dpkg,cache,log}/ /tmp/* /var/tmp/*
 
 # Define Entry point script
