Move conda_init from Travis file to Ant file. Use custom conda folder ~/w4m-conda.

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,8 @@
-<project name="univariate" default="all">
+<project name="w4m.univariate" default="all">
 
+	<dirname property="this.dir" file="${ant.file.myproj}"/>
 	<property name="tool.xml" value="univariate_config.xml"/>
+	<property name="conda.dir" value="${user.home}/w4m-conda"/>
 
 	<!--~~~
 	~ ALL ~
@@ -14,7 +16,10 @@
 
 	<target name="test" depends="planemo.lint,planemo.test"/>
 
-	<!-- PLANEMO LINT -->
+	<!--~~~~~~~~~~~~
+	~ PLANEMO LINT ~
+	~~~~~~~~~~~~~-->
+
 	<target name="planemo.lint">
 		<exec executable="planemo" failonerror="true">
 			<arg value="lint"/>
@@ -22,19 +27,53 @@
 		</exec>
 	</target>
 
-	<!-- PLANEMO TEST -->
-	<target name="planemo.test">
-		<exec executable="planemo" failonerror="true">
-			<arg value="conda_install"/>
-			<arg value="${tool.xml}"/>
-		</exec>
+	<!--~~~~~~~~~~~~
+	~ PLANEMO TEST ~
+	~~~~~~~~~~~~~-->
+
+	<target name="planemo.test" depends="planemo.conda.install">
 		<exec executable="planemo" failonerror="true">
 			<arg value="test"/>
+			<arg value="--conda_prefix"/>
+			<arg value="${conda.dir}"/>
 			<arg value="--galaxy_branch"/>
 			<arg value="release_16.01"/>
 			<arg value="--conda_dependency_resolution"/>
 			<arg value="${tool.xml}"/>
 		</exec>
+	</target>
+
+	<!--~~~~~~~~~~~~~~~~~~~~~
+	~ PLANEMO CONDA INSTALL ~
+	~~~~~~~~~~~~~~~~~~~~~~-->
+
+	<target name="planemo.conda.install" depends="planemo.conda.init">
+		<exec executable="planemo" failonerror="true">
+			<arg value="conda_install"/>
+			<arg value="--conda_prefix"/>
+			<arg value="${conda.dir}"/>
+			<arg value="${tool.xml}"/>
+		</exec>
+	</target>
+
+	<!--~~~~~~~~~~~~~~~~~~
+	~ PLANEMO CONDA INIT ~
+	~~~~~~~~~~~~~~~~~~~-->
+
+	<target name="planemo.conda.init">
+		<exec executable="planemo" failonerror="true">
+			<arg value="conda_init"/>
+			<arg value="--conda_prefix"/>
+			<arg value="${conda.dir}"/>
+		</exec>
+	</target>
+
+	<!--~~~~~
+	~ CLEAN ~
+	~~~~~~-->
+
+	<target name="clean">
+		<delete dir="${conda.dir}"/>
 	</target>
 
 </project>
