--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,5 @@
 <project name="w4m.univariate" default="all">
 
-	<dirname property="this.dir" file="${ant.file.myproj}"/>
 	<property name="tool.xml" value="univariate_config.xml"/>
 	<property name="conda.dir" value="${user.home}/w4m-conda"/>
 
@@ -67,6 +66,23 @@
 			<arg value="${conda.dir}"/>
 		</exec>
 	</target>
+
+	<!--~~~~~~~~~~~~~
+	~ PLANEMO SERVE ~
+	~~~~~~~~~~~~~~-->
+
+	<target name="planemo.serve" depends="planemo.conda.install">
+		<exec executable="planemo" failonerror="true">
+			<arg value="serve"/>
+			<arg value="--conda_prefix"/>
+			<arg value="${conda.dir}"/>
+			<arg value="--galaxy_branch"/>
+			<arg value="release_16.01"/>
+			<arg value="--conda_dependency_resolution"/>
+			<arg value="${tool.xml}"/>
+		</exec>
+	</target>
+
 
 	<!--~~~~~
 	~ CLEAN ~
