--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ before_install:
  - sudo apt-get install -y ant
  - virtualenv planemo-venv
  - . planemo-venv/bin/activate
+ - pip install --upgrade pip setuptools
  - pip install planemo
 
 script:
