--- a/.shed.yml
+++ b/.shed.yml
@@ -1,4 +1,4 @@
-categories: [Metabolomics]
+categories: [Metabolomics][Transcriptomics][Proteomics][Statistics]
 description: '[W4M][Metabolomics][LC-MS][GC-MS][NMR] Univariate statistics.'
 homepage_url: http://workflow4metabolomics.org
 long_description: 'The module performs two sample tests (t-test and Wilcoxon rank test), analysis of variance and Kruskal-Wallis rank test, and correlation tests (by using either the pearson or the spearman correlation).'
