--- a/build.xml
+++ b/build.xml
@@ -44,7 +44,7 @@
 	~ PLANEMO TEST ~
 	~~~~~~~~~~~~~-->
 
-	<target name="planemo.test" depends="planemo.conda.install">
+	<target name="planemo.test">
 		<exec executable="planemo" failonerror="true">
 			<arg value="test"/>
 			<arg value="--conda_prefix"/>
@@ -56,36 +56,11 @@
 		</exec>
 	</target>
 
-	<!--~~~~~~~~~~~~~~~~~~~~~
-	~ PLANEMO CONDA INSTALL ~
-	~~~~~~~~~~~~~~~~~~~~~~-->
-
-	<target name="planemo.conda.install" depends="planemo.conda.init">
-		<exec executable="planemo" failonerror="true">
-			<arg value="conda_install"/>
-			<arg value="--conda_prefix"/>
-			<arg value="${conda.dir}"/>
-			<arg value="${tool.xml}"/>
-		</exec>
-	</target>
-
-	<!--~~~~~~~~~~~~~~~~~~
-	~ PLANEMO CONDA INIT ~
-	~~~~~~~~~~~~~~~~~~~-->
-
-	<target name="planemo.conda.init">
-		<exec executable="planemo" failonerror="true">
-			<arg value="conda_init"/>
-			<arg value="--conda_prefix"/>
-			<arg value="${conda.dir}"/>
-		</exec>
-	</target>
-
 	<!--~~~~~~~~~~~~~
 	~ PLANEMO SERVE ~
 	~~~~~~~~~~~~~~-->
 
-	<target name="planemo.serve" depends="planemo.conda.install">
+	<target name="planemo.serve">
 		<exec executable="planemo" failonerror="true">
 			<arg value="serve"/>
 			<arg value="--conda_prefix"/>
