--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
  - sudo apt-get install -y python-virtualenv
  - sudo apt-get install -y ant
  - sudo apt-get install -y r-base
- - sudo R -e "install.packages(c('batch'), dependencies = TRUE, repos='http://lib.ugent.be/CRAN/')" 
+ - sudo R -e "install.packages(c('batch'), dependencies = TRUE, repos='https://cloud.r-project.org/')" 
  - virtualenv planemo-venv
  - . planemo-venv/bin/activate
  - pip install --upgrade pip setuptools
