--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,16 @@ notifications:
     - etienne.thevenot@cea.fr
 
 before_install:
+ - sudo sed -i -e '$adeb http://cran.univ-paris1.fr/bin/linux/ubuntu trusty/' /etc/apt/sources.list
+ - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+ - sudo apt-get install -y --no-install-recommends r-base
+ - sudo R -e "install.packages(c('batch'), dependencies = TRUE, repos = 'https://cloud.r-project.org/')"
  - sudo apt-get install -y python-virtualenv
  - sudo apt-get install -y ant
  - virtualenv planemo-venv
  - . planemo-venv/bin/activate
  - pip install --upgrade pip setuptools
  - pip install planemo
- - planemo conda_init
- - planemo conda_install univariate_config.xml
 
 script:
  - ant test
