--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ notifications:
 before_install:
  - sudo sed -i -e '$adeb http://cran.univ-paris1.fr/bin/linux/ubuntu trusty/' /etc/apt/sources.list
  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
+ - sudo apt-get update
  - sudo apt-get install -y --no-install-recommends r-base
  - sudo R -e "install.packages(c('batch'), dependencies = TRUE, repos = 'https://cloud.r-project.org/')"
  - sudo apt-get install -y python-virtualenv
