--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,8 @@ before_install:
  - sudo apt-get install -y --no-install-recommends r-base
  - sudo R -e "install.packages(c('batch', 'PMCMR'), dependencies = TRUE, repos = 'https://cloud.r-project.org/')"
  - sudo apt-get install -y python-virtualenv
- - sudo apt-get install -y ant
- - virtualenv planemo-venv
- - . planemo-venv/bin/activate
- - pip install --upgrade pip setuptools
- - pip install planemo
 
 script:
- - ant test
+ - make test
+ - make planemolint
+ - make planemotest
