--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
  - sudo sed -i -e '$adeb http://cran.univ-paris1.fr/bin/linux/ubuntu trusty/' /etc/apt/sources.list
  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9
  - sudo apt-get update
- - sudo apt-get install -y --no-install-recommends r-base
+ - sudo apt-get install -y libreadline6-dev
+ - sudo apt-get install -y r-base
  - sudo R -e "install.packages(c('batch', 'PMCMR'), dependencies = TRUE, repos = 'https://cloud.r-project.org/')"
  - sudo apt-get install -y python-virtualenv
 
